[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["grant0417 <grantgurvis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
rayon = "1.3.0"
tobj="1.0.0"
nalgebra="0.21.0"
indicatif = {version = "0.14.0", features = ["with_rayon"]}
image="0.23.4"
clap = "2.33.1"
