[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["grant0417 <grantgurvis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rayon = "1.4.0"
tobj = "1.0.0"
nalgebra = "0.21.0"
indicatif = {version = "0.14.0", features = ["with_rayon"]}
image = "0.23.4"
clap = "2.33.1"
wasm-bindgen = "0.2.67"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.44"
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"